--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -1,22 +1,11 @@
-.card {
-  background-image: url('../../assets/lana.jpg');
-}
-
-.bg-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 16rem;
-  height: 12rem;
-}
 
 .black-layer {
+  background-color: black;
   position: absolute;
   top: 0;
   left: 0;
-  background-color: black;
+  height: 180px;
   opacity: 0.6;
   color: white;
-  width: 16rem;
-  height: 12rem;
+  border-radius: 5px;
 }
